Bug #21174: Index degrades sort performance and              optimizer does not honor IGNORE INDEX  - Allow an index to be used for sorting the table    instead of filesort only if it is not disabled by    IGNORE INDEX.